--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,33 @@
+amqp==5.2.0
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+billiard==4.2.0
+bs4==0.0.2
 celery==5.4.0
-channels==4.0.0
-Django==5.1
-django-allauth==0.52.0
-django-compressor==4.5.1
-django-cors-headers==3.13.0
-django-debug-toolbar==4.4.6
-django-environ==0.11.2
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.0.0
-gunicorn==22.0.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+distlib==0.3.6
+Django==5.1.1
+django-cors-headers==4.4.0
+django-extensions==3.2.3
+django-htmx==1.19.0
+django-rest-framework==0.1.0
+djangorestframework==3.15.2
+filelock==3.8.0
+kombu==5.4.1
+lxml==5.2.2
+mysqlclient==2.1.1
 pika==1.3.2
-psycopg2-binary==2.9.6
-PyJWT==2.9.0
-redis==5.0.8
-requests==2.32.3
-sentry-sdk==2.12.0
-
+platformdirs==2.5.2
+prompt_toolkit==3.0.47
+python-dateutil==2.9.0.post0
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.4.2
+typing_extensions==4.12.2
+tzdata==2024.1
+vine==5.1.0
+virtualenv==20.16.3
+wcwidth==0.2.13
