--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,64 @@
 amqp==5.2.0
+appdirs==1.4.4
+arrow==1.3.0
 asgiref==3.8.1
+baron==0.10.1
 beautifulsoup4==4.12.3
 billiard==4.2.0
+binaryornot==0.4.4
 bs4==0.0.2
 celery==5.4.0
+certifi==2024.8.30
+chardet==5.2.0
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cookiecutter==1.7.3
 distlib==0.3.6
+dj-database-url==2.2.0
+dj-email-url==1.0.6
 Django==5.1.1
+django-cache-url==3.4.5
 django-cors-headers==4.4.0
+django-environ==0.11.2
+django-environs==0.1.1
 django-extensions==3.2.3
 django-htmx==1.19.0
 django-rest-framework==0.1.0
+django-tailwind==2.2.0
 djangorestframework==3.15.2
+environs==11.0.0
 filelock==3.8.0
+idna==3.10
+Jinja2==3.1.4
+jinja2-time==0.2.0
 kombu==5.4.1
 lxml==5.2.2
+MarkupSafe==2.1.5
+marshmallow==3.22.0
 mysqlclient==2.1.1
+packaging==24.1
 pika==1.3.2
 platformdirs==2.5.2
+poyo==0.5.0
 prompt_toolkit==3.0.47
+psycopg2==2.9.9
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-slugify==8.0.4
+redbaron==0.9.2
+requests==2.32.3
+rply==0.7.8
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.2
+text-unidecode==1.3
+types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.3
 vine==5.1.0
 virtualenv==20.16.3
 wcwidth==0.2.13
